--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "app"
   ],
   "scripts": {
-    "app:dev": "npm run dev --workspace=app"
+    "app:dev": "npm run dev --workspace=app",
+    "app:build": "npm run build --workspace=app"
   },
   "repository": {
     "type": "git",
