--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-moderator",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "web-moderator chrome extension",
   "workspaces": [
     "api",
@@ -22,9 +22,9 @@
   },
   "homepage": "https://github.com/geduramc/web-moderator#readme",
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0",
-    "vue-tsc": "^1.0.24"
+    "@vitejs/plugin-vue": "4.0.0",
+    "typescript": "4.9.3",
+    "vite": "4.1.0",
+    "vue-tsc": "1.0.24"
   }
 }
