chore: add jwt dependencies

--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "web-moderator-api",
   "scripts": {
+    "dev": "nodemon src/index.js",
     "start": "node src/index.js"
   },
   "author": "geduramc",
@@ -10,9 +11,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.20"
   }
 }
