chore: add api dev script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "app:dev": "npm run dev --workspace=app",
     "app:build": "npm run build --workspace=app",
-    "api:dev": "npm start --workspace=api"
+    "api:dev": "npm run dev --workspace=api",
+    "api:start": "npm start --workspace=api"
   },
   "repository": {
     "type": "git",
