chore: add start script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "app:dev": "npm run dev --workspace=app",
     "app:build": "npm run build --workspace=app",
     "api:dev": "npm run dev --workspace=api",
-    "api:start": "npm start --workspace=api"
+    "api:start": "npm start --workspace=api",
+    "start": "npm run api:start"
   },
   "repository": {
     "type": "git",
