--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,6 +3,7 @@
   "name": "Web Moderator",
   "version": "0.0.1",
   "description": "Web media content moderator",
+  "author": "geduramc",
   "action": {
     "default_popup": "popup/popup.html",
     "default_icon": {
@@ -18,7 +19,9 @@
     "48": "/icons/icon-48.png",
     "128": "/icons/icon-128.png"
   },
-  "author": "geduramc",
+  "background": {
+    "service_worker": "background.js"
+  },
   "content_scripts": [
     {
       "matches": [
