--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Web Moderator",
   "version": "0.0.1",
-  "description": "Web media content moderator",
+  "description": "multimedia web content moderator",
   "author": "geduramc",
   "action": {
     "default_popup": "popup/popup.html",
