--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
   "name": "web-moderator",
   "version": "0.0.1",
   "description": "web-moderator chrome extension",
-  "workspaces": [
-    "api"
-  ],
+  "type": "module",
   "scripts": {
-    "api:dev": "npm run dev --workspace=api",
-    "api:start": "npm start --workspace=api",
-    "start": "npm run api:start"
+    "dev": "nodemon api/src/index.js",
+    "start": "node api/src/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,10 +18,19 @@
     "url": "https://github.com/geduramc/web-moderator/issues"
   },
   "homepage": "https://github.com/geduramc/web-moderator#readme",
+  "dependencies": {
+    "cors": "2.8.5",
+    "dotenv": "16.0.3",
+    "express": "4.18.2",
+    "jsonwebtoken": "9.0.0",
+    "node-fetch": "3.3.0"
+  },
   "devDependencies": {
     "@vitejs/plugin-vue": "4.0.0",
     "typescript": "4.9.3",
     "vite": "4.1.0",
-    "vue-tsc": "1.0.24"
+    "vue-tsc": "1.0.24",
+    "morgan": "1.10.0",
+    "nodemon": "2.0.20"
   }
 }
